--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js",
+    "watch": "nodemon",
     "seed": "node seeders/seeds.js"
   },
   "keywords": [],
@@ -17,9 +17,9 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "graphql": "^15.5.0",
-    "mongoose": "^5.12.7"
+    "mongoose": "^5.9.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.3"
   }
 }
