--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deepthoughts",
+  "name": "mern-social-media",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -14,10 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4",
-    "react-router-dom": "^5.2.0"
+    "if-env": "^1.0.4"
   },
   "devDependencies": {
-    "concurrently": "^6.0.2"
+    "concurrently": "^5.1.0"
   }
 }
